# pynoddgcs

./: .gitignore  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
api/: index.html
api/connect/: index.html
api/publish/: index.html
docs/: README.md
docs/api/: connect.md  publish.md
notebooks/: publish_viame_example.ipynb  yolo11n.pt.cac73ce3bb4e41e0865651b7cfdb343c.partial
pygcsutils/: connect.py
pynoddgcs/: connect.py  publish.py
requirements/: common.txt  dev.txt
search/: search_index.json
tests/: test_utils.py
