[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pynoddgcs"
version = "0.1.0"
description = "Utilities for connecting to a gcs bucket and uploading files"
authors = [
    { name = "scott brown" },
]
dependencies = [
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
